gccida/g1/exp_equiv_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/exp_equiv_p/src/cse.c:3108:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v31 = ( ( unsigned int)( mode_class_0[v29] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/exp_equiv_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/exp_equiv_p/src/cse.c:3155:22: error: expected identifier or '('
 struct cse_reg_info = cached_cse_reg_info; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/exp_equiv_p/src/cse.c:3160:64: error: expected ')'
if ( cached_regno != ( _DWORD)rtuint || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/exp_equiv_p/src/cse.c:3160:41: note: to match this '('
if ( cached_regno != ( _DWORD)rtuint || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/exp_equiv_p/src/cse.c:3160:87: error: expected expression
if ( cached_regno != ( _DWORD)rtuint || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/exp_equiv_p/src/cse.c:3161:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( rtuint); 
 ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/exp_equiv_p/src/obj/cse.o] Error 1
